search audit trial
if search with date then it is not giving result

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
   <link href="/css/bootstrap.min.css" rel="stylesheet">
   <link href="/fonts/fontawesome/css/all.css" rel="stylesheet">
   <link href="/css/custom.css" rel="stylesheet">
+  <!-- <link href="/css/style-dropdown.css" rel="stylesheet"> -->
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
